# navsim

./: .gitmodules  LICENSE  README.md  pyproject.toml
config/: correlator_example.yml  imu_example.yaml  iridium-NEXT.tle  measurement_example.yaml  measurement_example.yml
examples/: measurement.ipynb  simulate_correlators.py  simulate_signal.py
navsim/: __init__.py  common.py  config.py  configuration.py  emitters.py  exceptions.py  message.py  plot.py  simulation.py
navsim/error_models/: __init__.py  atmosphere.py  clock.py  imu.py  signal.py
navsim/simulations/: __init__.py  correlator.py  ins.py  measurement.py  simulation.py
scripts/: paths.py  simulate.py  simulate_correlators.py  simulate_signal.py
